<resources>
    <string name="app_name">NerdLab</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_first">NerdLab</string>

    <string name="title_section1">主页</string>
    <string name="title_section2">校园活动</string>
    <string name="title_section3">社团活动</string>
    <string name="title_section4">个人活动</string>
    <string name="title_section5">其他</string>

    <string name="title_activity_fullscreen">NerdLab</string>
    <string name="dummy_content">Nerd\nLab</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="title_activity_drawer">NerdLab</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="app_description">Android drawer icon with material design animation</string>



    <string name="fbm_item1">search activity</string>
    <string name="fbm_item2">post</string>
    <string name="navItem1">navItem1</string>
    <string name="navItem2">navItem2</string>
    <string name="navItem3">navItem3</string>
    <string name="navItem4">navItem4</string>

    <string name="title_activity_text_tab">text_tab</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_world">Hello world!</string>
    
      <!--weibo project-->
      <!-- 全局文字 -->
      <string name="hello">Hello World!</string>
      <!--<string name="app_name">demos</string>-->
      <string name="app_version">v1.0</string>
      <!-- 按钮文字 -->
      <string name="btn_confirm">确认</string>
      <string name="btn_cancel">取消</string>
      <string name="btn_comment">写评论</string>
      <string name="btn_addfans">加关注</string>
      <!-- 菜单文字 -->
      <string name="menu_app_write">写微博</string>
      <string name="menu_app_logout">注销账户</string>
      <string name="menu_app_about">应用信息</string>
      <string name="menu_demo_web">网页示例</string>
      <string name="menu_demo_map">地图示例</string>
      <string name="menu_demo_test">测试示例</string>
      <!-- 配置提示 -->
      <string name="config_sign">修改签名</string>
      <string name="config_face">更换头像</string>
      <!-- 提示文字 -->
      <string name="msg_loginfail">登录失败</string>
      <!-- 界面文字 -->
      <string name="login_title">用户登录</string>
      <string name="login_username">账户</string>
      <string name="login_password">密码</string>
      <string name="login_remember">记住密码</string>
      <string name="login_submit">登录</string>
      <string name="edit_submit">保存</string>
      <string name="blog_comment">评论</string>
      <string name="customer_fans">粉丝</string>
      <string name="customer_blog">微博</string>

    <!--用户个人信息-->
    <string name="user_nickname">Your nickname here</string>
    <string name="user_bio">Say something about you</string>
    <string name="user_location">Location</string>
    <string name="user_gender">Gender</string>
    <string name="user_birthday">Your birthday</string>
    <string name="user_email">Your email address</string>
    <string name="head_profile">Profile</string>
    <string name="user_qqNum">Your QQ numbers</string>
    <string name="user_info">个人信息</string>
    <string name="user_contact">联系方式</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="str_nickname">昵称</string>
    <string name="str_email">电子邮箱</string>
    <string name="str_qqNum">QQ</string>
    <string name="str_bio">简介</string>
    <string name="str_gender">性别</string><string name="str_location">所在地</string><string name="str_birthday">生日</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--weibo project done-->

    <!--Event Post Page-->
    <string name="event_host_name">John Smith</string>
    <string name="event_posted_time">09:27 AM</string>
    <string name="event_viewed_times">249</string>
    <string name="event_title">Sample Title</string>
    <string name="event_content">bla bla blabla bla blabla bla blabla bla blabla bla blabla bla blabla</string>
    <string name="event_location">厦大西村</string>
    <string name="event_time">10月1日 15:00</string>
    <string name="event_tag">户外，运动</string>
    <string name="event_join">加入</string>
    <string name="event_comment">评论</string>
    <string name="event_send_button">发送</string>
    <string name="event_post_hint">说点什么..</string>
    <string name="event_post">发布新帖</string>

    <!--Post Compose-->
    <string name="post_title">活动标题</string>
    <string name="post_title_hint">此处填写活动标题</string>
    <string name="post_location">活动地点</string>
    <string name="post_time">活动时间</string>
    <string name="post_content">详情</string>
    <string name="post_post">发布</string>
    <string name="comment_title">评论标题</string>
    <string name="comment_content">评论内容</string>
    <string name="comment_time">2015-1-4 9:44 AM</string>
    <string name="comment_reply_button">回复</string>
</resources>
