<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_margin="@dimen/margin_normal"
    android:padding="@dimen/padding_normal"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/post_title"
        android:padding="@dimen/padding_normal"
        android:textSize="@dimen/text_size_medium"/>

    <EditText
        android:layout_width="0dp"
        android:layout_weight="3"
        android:textSize="@dimen/text_size_medium"
        android:layout_height="wrap_content"
        android:text="@string/post_title_hint"
        android:id="@+id/post_title"
        android:textColor="@color/half_black"
        style="@android:style/Widget.DeviceDefault.Light.EditText" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:padding="@dimen/padding_normal"
        android:background="@color/white"
        android:orientation="horizontal">
<TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_column="0"
        android:layout_height="32dp"
        android:src="@drawable/location_icon"
        android:layout_width="49dp" />
    <ImageView
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:src="@drawable/clock_icon"
        android:layout_height="32dp"/>
    <ImageView
        android:layout_column="2"
        android:layout_height="30dp"
        android:src="@drawable/picture_icon"
        android:layout_width="47dp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_weight="5"
        android:layout_height="match_parent" />

    <Button
        android:layout_height="@dimen/button_height"
        android:layout_weight="1"
        android:layout_width="@dimen/button_width"
        android:text="@string/post_post"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/yellow"
        android:layout_gravity="right|bottom"
        android:textColor="@color/white"
        android:layout_column="4"/>
</TableRow>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
           <fragment
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:name="android.support.v4.app.ListFragment"
               tools:layout="@layout/post_item"></fragment>
            </ListView>
        </LinearLayout>

</LinearLayout>